--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $day-size: 100px;
 $gap: 1px;
-$calendar-width: 7 * ($day-size + 10px);
+$calendar-width: 7 * ($day-size + $gap);
 $day-in-month: 31;
 $days: ("mon": 1, "tue": 2, "wed": 3, "thu": 4, "fri": 5, "sat": 6, "sun": 7);
 $main-color: black;
