--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,6 @@ $calendarPadding:10px;
 $calendarBorder:2px;
 $dayBoxBorder:1px ;
 $boxGap:1px;
-$days:mon, tue, wed, thu, fri, sat, sun;
+$days: 1 mon, 2 tue, 3 wed, 4 thu, 5 fri, 6 sat, 7 sun;
 $dayCount: 31;
 $monthLenght: 31;
