--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,6 @@
-body {
-  margin: 0;
-}
+@import "./utils/variables";
+@import "./utils/mixin";
+@import "./blocks/page";
+@import "./blocks/container";
+@import "./blocks/calendar";
+@import "./blocks/day";
