--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,10 +15,8 @@ body {
 }
 
 @each $day, $number in $days {
-  .calendar--start-day-#{$day} {
-    &__day:first-child {
-      margin-left: ($day-size + $gap);
-    }
+  .calendar--start-day--#{$day} .calendar__day:first-child {
+    margin-left: (($day-size + $gap) * $number);
   }
 }
 
