--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -20,7 +20,7 @@
 
   @each $number, $day in $days {
     &--start-day-#{$day} :nth-child(#{$number}) {
-      margin-left: 85.7%;
+      margin-left: #{$number}px;
     }
   }
 
