--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ body {
 }
 
 @each $day, $number in $days {
-  .calendar--start-day--#{$day} .calendar__day:first-child {
+  .calendar--start-day--#{$day} :first-child {
     margin-left: (($day-size + $gap) * $number);
   }
 }
