--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
-body {
-  margin: 0;
-}
+@import "../styles/utils/variables";
+@import "../styles/utils/mixins";
+@import "blocks/page";
+@import "blocks/calendar";
+@import "blocks/days"
