--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -28,7 +28,7 @@
   }
 
   @each $day, $margin-size in $days {
-    &__start-day#{$day} {
+    &__start-day--#{$day} > :nth-child(1) {
       margin-left: $margin-size;
     }
   }
