--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,61 @@
+$cell-size: 100px;
+$gap-size: 1px;
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.calendar {
+  position: relative;
+  width: 7*$cell-size;
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  height: auto;
+  margin: 10px;
+  margin-top: 20px;
+
+  &__day {
+    box-sizing: border-box;
+    width: calc((100% - 7px) / 7);
+    height: $cell-size;
+    border: 1px solid #000;
+    background-color: #eee;
+    transition-duration: 0.5s;
+    transition-property: all;
+    cursor: pointer;
+    padding: 30px;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+    }
+  }
+}
+
+@for $last-day from 28 through 31 {
+  .calendar--month-length--#{$last-day}
+  .calendar__day:nth-child(n + #{$last-day+1})::before {
+    content: "";
+    display: none;
+  }
+}
+
+@for $day from 1 through 31 {
+  .calendar__day:nth-child(#{$day})::before {
+    content: "#{$day}";
+  }
+}
+
+$weekdays: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
+@each $weekday, $cell-number in $weekdays {
+  .calendar--start-day--#{$weekday} :nth-child(1) {
+    margin-left: calc(#{$cell-size} * #{$cell-number});
+  }
 }
