add fixed calendar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,7 +51,7 @@ body {
   }
 
   @for $length from 29 through 31 {
-    &--month-length-#{$length} :nth-child(n + #{$length}) {
+    &--month-length-#{$length} :nth-child(#{$length + 1}) {
       display: none;
     }
   }
