--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,16 @@
 @import "./utils/variables";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
 
 .calendar {
   position: absolute;
-  box-sizing: border-box;
   margin: 0;
-
   display: flex;
   top: 50%;
   left: 50%;
@@ -19,7 +21,6 @@ body {
 
   &__day {
     display: flex;
-    box-sizing: border-box;
     width: 100px;
     height: 100px;
     border: 1px solid #000;
@@ -50,8 +51,8 @@ body {
     }
   }
 
-  @for $length from 29 through 31 {
-    &--month-length-#{$length} :nth-child(#{$length + 1}) {
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} :nth-child(n + #{$length + 1}) {
       display: none;
     }
   }
