--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,2 +1,10 @@
 $cell-size: 100px;
 $calendar-gap: 1px;
+$weekdays:
+  "mon" 6,
+  "tue" 5,
+  "wed" 4,
+  "thu" 3,
+  "fri" 2,
+  "sat" 1,
+  "sun" 0;
