changed modifiers value naming

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -48,13 +48,13 @@ body {
   }
 
   @each $day, $indent in $days {
-    &--start-day-#{$day} :first-child {
+    &--start-day--#{$day} :first-child {
       margin-left: $indent;
     }
   }
 
   @for $dayNum from 28 through 31 {
-    &--month-length-#{$dayNum} :nth-child(n + #{$dayNum}) ~ * {
+    &--month-length--#{$dayNum} :nth-child(n + #{$dayNum}) ~ * {
       display: none;
     }
   }
