--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,61 +1,9 @@
-@import "utils/variables.scss";
+@import "utils/variables";
+@import "blocks/calendar";
 
 body {
   margin: 0;
   padding: 0;
   font-family: "Arial", sans-serif;
   font-size: 30px;
-}
-
-.calendar {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  display: flex;
-  flex-wrap: wrap;
-  gap: $gap;
-
-  padding: 10px;
-  width: $calendar-size;
-
-  &__day {
-    box-sizing: border-box;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: $cell-size;
-    height: $cell-size;
-    background-color: #eee;
-    cursor: pointer;
-    border: 1px solid black;
-
-    transition: all 0.5s;
-
-    @for $dayNum from 1 through 31 {
-      &:nth-child(#{$dayNum}):before {
-        content: "#{$dayNum}";
-      }
-    }
-
-    &:hover {
-      transform: translateY(-20px);
-      background-color: pink;
-    }
-  }
-
-  @each $day, $indent in $days {
-    &--start-day--#{$day} :first-child {
-      margin-left: $indent;
-    }
-  }
-
-  @for $dayNum from 28 through 31 {
-    &--month-length--#{$dayNum} :nth-child(n + #{$dayNum}) ~ * {
-      display: none;
-    }
-  }
 }
