--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,60 +4,66 @@ $border-width: 1px;
 $padding: 10px;
 $gap: 1px;
 $columns: 7;
-$container-width: ($cell-size + 2 * $border-width + 2 * $padding)
-  * $columns + ($columns - 1)
-  * $gap;
+
+$container-width: 800px;
 $start-days: ( mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
 $month-length: 28, 29, 30, 31;
 
 body {
   margin: 0;
   padding: 0;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
   gap: $gap;
+  column-count: $columns;
   max-width: $container-width;
-}
+  width: 100%;
 
-.day {
-  width: $cell-size;
-  height: $cell-size;
-  background-color: #eee;
-  border: $border-width solid black;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    background-color: #eee;
+    border: $border-width solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, sans-serif;
+    font-size: 30px;
 
-  &:hover {
-    cursor: pointer;
-    background-color: pink;
-    transform: translateY(-20px);
-    transition: transform 0.5s;
-  }
-
-  @for $day from 1 through 31 {
-    &:nth-child(#{$day})::before {
-      content: "#{$day}";
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translateY(-20px);
+      transition: transform 0.5s;
     }
+
+    @for $__day from 1 through 31 {
+      &:nth-child(#{$__day})::before {
+        content: "#{$__day}";
+      }
+    }
+
   }
 
 }
 
 @for $length from 28 through 31 {
   .calendar--month-length-#{$length} {
-    .day:nth-child(n + #{$length + 1}) {
+    .calendar__day:nth-child(n + #{$length + 1}) {
       display: none;
     }
   }
 }
 
-@each $day, $start in $start-days {
-  .calendar--first-day-#{$day} .day:first-child {
+@each $__day, $start in $start-days {
+  .calendar--first-day-#{$__day} .calendar__day:first-child {
     margin-left: ($cell-size + $gap) * ($start - 1);
   }
 }
