--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,7 +5,7 @@ $padding: 10px;
 $gap: 1px;
 $columns: 7;
 
-$container-width: 800px;
+$container-max-width: 800px;
 $start-days: ( mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
 $month-length: 28, 29, 30, 31;
 
@@ -23,7 +23,7 @@ body {
   flex-wrap: wrap;
   gap: $gap;
   column-count: $columns;
-  max-width: $container-width;
+  max-width: $container-max-width;
   width: 100%;
 
   &__day {
