--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,13 +9,17 @@ $container-max-width: 800px;
 $start-days: ( mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 7);
 $month-length: 28, 29, 30, 31;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   justify-content: center;
   align-items: center;
   display: flex;
-
+  height: 100vh;
 }
 
 .calendar {
