fix solution - calendar

--- a/src/styles/utils/varibles.scss
+++ b/src/styles/utils/varibles.scss
@@ -1,11 +1,17 @@
+//colors
+$color-black: #000;
+$color-pink: #ffc0cb;
+$bg-main-color: #eee;
+
+$start-days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
 $day-block-size: 100px;
 $section-padding: 10px;
 $section-padding-2x: $section-padding * 2;
 $days-in-week: 7;
 $days-gap: 1px;
 
-$calendar-width:
-  ($day-block-size * $days-in-week) + $section-padding-2x + ($days-gap * 6);
+$calendar-width: ($day-block-size * $days-in-week) + $section-padding-2x +
+  ($days-gap * 6);
 
 $calendr-day-position:
-  ($calendar-width - $section-padding-2x - ($days-gap * 6) ) / $days-in-week;
+ ($calendar-width - $section-padding-2x - ($days-gap * 6)) / $days-in-week;
