remove bit hard code

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,12 +1,13 @@
 $cell-size: 100px;
 $gap: 1px;
+$indent: $cell-size + $gap;
 $calendar-size: $cell-size * 7 + $gap * 6;
 $days: (
   "mon": 0,
-  "tue": 101px,
-  "wed": 202px,
-  "thu": 303px,
-  "fri": 404px,
-  "sat": 505px,
-  "sun": 606px,
+  "tue": $indent,
+  "wed": $indent * 2,
+  "thu": $indent * 3,
+  "fri": $indent * 4,
+  "sat": $indent * 5,
+  "sun": $indent * 6,
 );
