--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,42 +1,43 @@
-$day-size: 100px;
-$gap: 1px;
+@import "variables";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   margin: 0;
-  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .celendar {
   display: flex;
-  margin: auto;
-  width: 707px;
-  font-family: Arial, Helvetica, sans-serif;
+  width: 727px;
+  padding: 10px;
 
   &__month {
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 1px;
+    gap: $gap;
+    margin: 0;
+    padding: 0;
   }
 }
 
 .month__day {
-  box-sizing: border-box;
   display: inline-block;
+  width: $day-size;
+  height: $day-size;
   flex-shrink: 0;
-  width: 100px;
-  height: 100px;
-  background-color: #eee;
-  border: 1px solid #000;
   font-size: 30px;
   text-align: center;
-  line-height: 100px;
+  line-height: $day-size;
+  background-color: $day-color;
+  border: 1px solid #000;
   cursor: pointer;
   transition: transform 0.5s;
 
   &:hover {
-    background-color: #ffc0cb;
+    background-color: $day-color-hover;
     transform: translateY(-20px);
   }
 
@@ -46,16 +47,6 @@ body {
     }
   }
 }
-
-$start-days: (
-  "mon": 0,
-  "tue": 1,
-  "wed": 2,
-  "thu": 3,
-  "fri": 4,
-  "sat": 5,
-  "sun": 6
-);
 
 @each $name, $value in $start-days {
   .celendar--start-day-#{$name} .month__day:first-child {
