--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -5,3 +5,12 @@ $gap: 1px;
 $day-bg-color: #eee;
 $day-bg-color-hover: #ffc0cb;
 $day-border-color: #000;
+
+$days:
+  "mon" 0,
+  "tue" $day-size * 1 + $gap * 1,
+  "wed" $day-size * 2 + $gap * 2,
+  "thu" $day-size * 3 + $gap * 3,
+  "fri" $day-size * 4 + $gap * 4,
+  "sut" $day-size * 5 + $gap * 5,
+  "sun" $day-size * 6 + $gap * 6;
