--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,12 +2,15 @@ $cell-size: 100px;
 $gap-size: 1px;
 
 body {
+  display: flex;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
-  display: flex;
   justify-content: center;
   text-align: center;
+  align-items: center;
+  height: 100vh;
+
 }
 
 .calendar {
@@ -18,7 +21,6 @@ body {
   gap: $gap-size;
   height: auto;
   margin: 10px;
-  margin-top: 20px;
 
   &__day {
     box-sizing: border-box;
@@ -41,8 +43,7 @@ body {
 @for $last-day from 28 through 31 {
   .calendar--month-length--#{$last-day}
   .calendar__day:nth-child(n + #{$last-day+1})::before {
-    content: "";
-    display: none;
+    content: "#{$last-day}";
   }
 }
 
