add correct month length 1

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,9 +41,8 @@ body {
 }
 
 @for $last-day from 28 through 31 {
-  .calendar--month-length--#{$last-day}
-  .calendar__day:nth-child(n + #{$last-day+1})::before {
-    content: "#{$last-day}";
+  .calendar--month-length--#{$last-day} :nth-child(n + #{$last-day+1}) {
+    display: none;
   }
 }
 
