Calendar 1st attempt

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,18 @@
 body {
   margin: 0;
 }
+
+$num-days: 31;
+$start-week-day: sun;
+$month-length: 28;
+$color-day-main: #eee;
+$color-day-hover: #ffbfcb;
+$color-day-number: black;
+$day-size: 100px;
+$day-border:  1px solid black;
+$day-font: arial;
+$day-font-size: 30px;
+$cell-gap: 1px;
+
+@import "./components/calendar";
+@import "./components/cell";
