--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,4 @@
-$cell-size: 100px;
-$gap-size: 1px;
+@import "variables";
 
 body {
   display: flex;
@@ -51,8 +50,6 @@ body {
     content: "#{$day}";
   }
 }
-
-$weekdays: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
 
 @each $weekday, $cell-number in $weekdays {
   .calendar--start-day--#{$weekday} :nth-child(1) {
