--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,6 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   font-size: 30px;
 }
