--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,9 @@
+@import "utils/variables";
+@import "blocks/calendar";
+
 body {
   margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 30px;
 }
