--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,63 @@
+$cell-size: 100px;
+$number-size: 30px;
+$main-color: #eee;
+$content-color: #000;
+$hover-color: #c3596b;
+
 body {
   margin: 0;
+}
+
+.calendar {
+  padding: 10px;
+
+  width: 7 * $cell-size + 7px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  @for $month-length from 28 through 31 {
+    &--#{$month-length} :nth-child(n + #{$month-length + 1}) {
+      display: none;
+    }
+  }
+
+  $start-day: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
+  &__cell {
+    box-sizing: border-box;
+    height: $cell-size;
+    width: $cell-size;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border: 1px solid $content-color;
+    background-color: $main-color;
+    cursor: pointer;
+
+    &::before {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: $number-size;
+      color: $content-color;
+    }
+
+    @for $number from 1 through 31 {
+      &--#{$number}::before {
+        content: "#{$number}";
+      }
+    }
+
+    @each $day, $distance in $start-day {
+      &--start-day--#{$day} {
+        margin-left: $distance * ($cell-size + 1);
+      }
+    }
+
+    &:hover {
+      transition: 500ms;
+      transform: translateY(-20px);
+      background-color: $hover-color;
+    }
+  }
 }
