--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,5 +2,7 @@
 
 body {
   margin: 0;
-  padding: 0;
+  line-height: $calendar__item-size;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
