--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,5 +1,6 @@
 $cell-size: 100px;
 $columns: 7;
-$padding: 10px;
+$padding-vertical: 20px;
+$padding-horizontal: 10px;
 $gap: 1px;
 $days: mon 0 , tue 1 , wed 2 thu 3, fri 4, sat 5 , sun 6 ;
