--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-body {
+@import "variables.scss";
+@import "../blocks/calendar.scss";
+
+:root {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
