add task Calendar solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
-body {
-  margin: 0;
-}
+@import "./utils/variables";
+
+@import "./blocks/calendar";
+@import "./blocks/day";
+@import "./blocks/daysNumbering";
+@import "./blocks/startDay";
+@import "./blocks/monthLength";
