task is corrected

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,11 +10,11 @@ $day__names: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
   width: calc(#{$size} * 7 + #{$padding-calendar} * 2 + #{$gap-day} * 6);
   display: flex;
   flex-wrap: wrap;
-  justify-content: right;
   align-items: center;
   gap: $gap-day;
   padding: $padding-calendar;
   margin: 35px auto;
+
   &__day {
     width: $size;
     height: $size;
@@ -27,13 +27,16 @@ $day__names: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
     cursor: pointer;
     &:hover {
       transform: translateY(-20px);
-      background-color: pink;
+      background: #f4c4f3;
+      background: -webkit-linear-gradient(to right, #fc67fa, #f4c4f3);
+      background: linear-gradient(to right, #fc67fa, #f4c4f3);
     }
   }
+
   &--start-day {
     @each $name, $margin in $day__names {
       &--#{$name} :first-child {
-        margin-left: $margin * $size + $gap-day * $margin;
+        margin-left: $margin * $size + $gap-day * $margin + 1.6 * $margin;
       }
     }
   }
@@ -45,6 +48,7 @@ $day__names: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
       font-family: Arial, Helvetica, sans-serif;
     }
   }
+
   &--month-length {
     @for $num from 28 through 31 {
       &--#{$num} :nth-child(n + #{$num + 1}) {
