--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,9 +27,7 @@ $day__names: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
     cursor: pointer;
     &:hover {
       transform: translateY(-20px);
-      background: #f4c4f3;
-      background: -webkit-linear-gradient(to right, #fc67fa, #f4c4f3);
-      background: linear-gradient(to right, #fc67fa, #f4c4f3);
+      background-color: pink;
     }
   }
 
