--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,4 @@
-$cell-size: 100px;
-$number-size: 30px;
-$main-color: #eee;
-$content-color: #000;
-$hover-color: pink;
+@import "variables.scss";
 
 body {
   margin: 0;
@@ -22,14 +18,11 @@ body {
     }
   }
 
-  $start-day:
-    mon 0,
-    tue 1,
-    wed 2,
-    thu 3,
-    fri 4,
-    sat 5,
-    sun 6;
+  @each $day, $distance in $start-day {
+    &--start-day--#{$day} {
+      margin-left: $distance * ($cell-size + 1);
+    }
+  }
 
   &__cell {
     box-sizing: border-box;
@@ -42,6 +35,9 @@ body {
     border: 1px solid $content-color;
     background-color: $main-color;
 
+    cursor: pointer;
+    transition: 500ms;
+
     &::before {
       font-family: Arial, Helvetica, sans-serif;
       font-size: $number-size;
@@ -49,22 +45,14 @@ body {
     }
 
     @for $number from 1 through 31 {
-      &--#{$number}::before {
+      &:nth-child(#{$number}):before {
         content: "#{$number}";
       }
     }
 
-    @each $day, $distance in $start-day {
-      &--start-day--#{$day} {
-        margin-left: $distance * ($cell-size + 1);
-      }
-    }
-
     &:hover {
-      transition: 500ms;
       transform: translateY(-20px);
       background-color: $hover-color;
-      cursor: pointer;
     }
   }
 }
