first attemp calendar

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,7 @@
+@import url(./blocks/calendar.scss);
+
 body {
-  margin: 0;
+  margin: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
