--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,12 @@
+@import "./blocks/variables";
+@import "./blocks/functions";
+@import "./blocks/calendar";
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
