--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,14 @@
+@import "./day-block.scss";
+@import "./calendar-block.scss";
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: $font-size;
+  font-weight: 400;
+  line-height: 40px;
+}
+
 body {
   margin: 0;
+  background-color: $background-color;
 }
