--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import "./normalize.scss";
+@import "./variables.scss";
+@import "./typography.scss";
+@import "./calendar.scss";
+
 body {
   margin: 0;
 }
