--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-@import "variables.scss";
-@import "../blocks/calendar.scss";
-
-:root {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import "./utils/variables.scss";
+@import "./blocks/calendar.scss";
+@import "./blocks/page.scss"
