--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -27,13 +27,13 @@
   }
 }
 
-@for $i from 1 through 31 {
-  .calendar__day:nth-child(#{$i}) {
+@for $dayOfMonth from 1 through 31 {
+  .calendar__day:nth-child(#{$dayOfMonth}) {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 30px;
     &::before {
-      content: "#{$i}";
+      content: "#{$dayOfMonth}";
       text-align: center;
       line-height: $main-size;
     }
@@ -48,8 +48,8 @@ $days: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
   }
 }
 
-@for $j from 28 through 31 {
-  .calendar--month-#{$j} :nth-child(n+#{$j + 1}) {
-    visibility: hidden;
+@for $dayOfMonthEnd from 28 through 31 {
+  .calendar--month-#{$dayOfMonthEnd} :nth-child(n+#{$dayOfMonthEnd + 1}) {
+    display: none;
   }
 }
