add cursor pointer

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -26,6 +26,7 @@
     font-size: 30px;
     line-height: 98px;
     text-align: center;
+    cursor: pointer;
     border: 1px solid $color-black;
     background-color: $border-color;
     transition: all 0.5s ease-in;
