--- a/src/styles/cell.scss
+++ b/src/styles/cell.scss
@@ -1,31 +1,17 @@
 .cell {
-  width: $cell-width;
-  height: $cell-height;
-  border: 1px solid $cell-border-color;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 22px;
-  font-weight: 700;
-  transition: all 0.5s ease;
-  &__day {
-    align-self: start;
-    color: $accent-color;
-  }
-
-  &__date {
-    align-self: end;
-    font-size: 30px;
-  }
+  width: $cell-size;
+  height: $cell-size;
+  border: $cell-border;
+  font-family: $cell-font;
+  font-size: $cell-font-size;
+  line-height: $cell-size;
+  text-align: center;
+  transition: background-color, transform 0.5s ease;
 
   &:hover {
     cursor: pointer;
+    background-color: #f5667e;
     transform: translateY(-20px);
-    background-color: #fffddd;
-
-    .cell__date {
-      color: $accent-color;
-      font-size: 40px;
-    }
   }
 }
+
