--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,10 @@
-@import "_vars";
-@import "reset";
-@import "container";
-@import "cell";
+@import 'vars';
+@import 'calendar';
+@import 'cell';
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
