--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,7 @@
-$cell-width: 100px;
-$cell-height: 100px;
-$cell-font-size: 12px;
-$cell-border-color: #181068;
-$accent-color: #930404;
+$cell-size: 100px;
+$cell-color: #eee;
+$cell-font: 'Arial';
+$cell-font-size:  30px;
+$cell-border: 1px solid #000;
+$days: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
+$calendar-gap: 1px;
