--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import 'utils/variables.scss';
-@import 'blocks/page.scss';
-@import 'blocks/calendar.scss';
+@import "utils/variables.scss";
+@import "blocks/page.scss";
+@import "blocks/calendar.scss";
