removed styles from loop, calculated margin, other small improvements

--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,7 +1,15 @@
+$duration: 0.5s;
 $column-size: 100px;
 $columns-in-row: 7;
 $gap-between-columns: 1px;
 $gaps-in-row: $columns-in-row - 1;
 $calendar-padding: 10px;
+$columns-margin: $column-size + $gap-between-columns;
 $weekdays:
-mon 0, tue 101px, wed 202px, thu 303px, fri 404px, sat 505px, sun 606px;
+  mon $columns-margin * 0,
+  tue $columns-margin * 1,
+  wed $columns-margin * 2,
+  thu $columns-margin * 3,
+  fri $columns-margin * 4,
+  sat $columns-margin * 5,
+  sun $columns-margin * 6;
