--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -11,7 +11,7 @@
   @for $days from 28 through 31 {
     &--month-length--#{$days} {
       :nth-child(n + #{$days+1}) {
-        visibility: hidden;
+        display: none;
       }
     }
   }
@@ -19,11 +19,6 @@
   @for $i from 1 through 31 {
     :nth-child(#{$i})::before {
       content: "#{$i}";
-      display: block;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 30px;
-      line-height: $column-size;
-      text-align: center;
     }
   }
 
@@ -42,11 +37,16 @@
     border: 1px solid black;
     background-color: #eee;
     cursor: pointer;
-    transition: transform 0.5s;
+    transition: transform $duration, background-color;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    line-height: $column-size;
+    text-align: center;
 
     &:hover {
-      background-color: lightpink;
       transform: translateY(-20px);
+      background-color: lightpink;
     }
   }
 }
