--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,64 @@
+@import "variables";
+
 body {
   margin: 0;
+}
+
+.calendar {
+  margin: auto;
+  display: flex;
+  padding-inline: $padding-size;
+  width: $container-width;
+  flex-wrap: wrap;
+
+  &__month {
+    display: flex;
+    flex-wrap: wrap;
+    gap: $gap-size;
+
+    @for $day from 1 through 31 {
+      &--month-length--#{$day} .calendar-cell:nth-child(-n + #{$day+1}) {
+        visibility: visible;
+      }
+    }
+  }
+
+  &__start-day {
+    @each $week-day, $day in $start-days {
+      &--#{$week-day} {
+        margin-left: ($cell-size + $gap-size) * ($day - 1) - $gap-size;
+      }
+    }
+  }
+
+  &-cell {
+    box-sizing: border-box;
+    width: $cell-size;
+    height: $cell-size;
+    background-color: $cell-color;
+    border: 1px solid black;
+    visibility: hidden;
+
+    &::before {
+      display: block;
+      font-size: 30px;
+      line-height: $cell-size;
+      font-family: Ariel, serif;
+      text-align: center;
+    }
+
+    @for $day from 1 through 31 {
+      &--#{$day}:before {
+        content: "" + $day;
+      }
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      transition: 0.5s;
+      background-color: pink;
+      cursor: pointer;
+
+    }
+  }
 }
