--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,3 +1,7 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
@@ -24,9 +28,9 @@
 
   &__day {
     box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 30px;
+    line-height: 98px;
+    text-align: center;
     height: $cell-size;
     width: $cell-size;
     border: 1px solid black;
@@ -43,8 +47,6 @@
     @for $num from 1 to 32 {
       &:nth-child(#{$num})::before {
         content: "#{$num}";
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
       }
     }
   }
