--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -5,28 +9,27 @@ body {
 }
 
 .calendar {
-  width: 7 * $square-size;
+  width: $days-in-week;
   display: flex;
   height: 100vh;
   align-items: center;
-  margin: auto ;
+  margin: auto;
 
   &__days {
     display: flex;
-    gap: 1px;
+    gap: $gep-in-days;
     flex-wrap: wrap;
   }
 
   &__day {
     height: $square-size;
-    width: calc((100% - 7px) / 7);
+    width: $square-size;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-sizing: border-box;
     background-color: #eee;
     border: 1px solid #000;
-    transition: transform 0, 5s;
+    transition: transform 0.5s, background-color 0.5s;
     cursor: pointer;
 
     &:hover {
@@ -46,13 +49,13 @@ body {
 
 @each $dayNumber, $dayName in $days-of-week {
   .calendar--start-day--#{$dayName} .calendar__day:first-child {
-    margin-left: calc(#{$square-size} * #{$dayNumber - 1});
+    margin-left: calc(#{$square-size + $gep-in-days} * #{$dayNumber - 1});
   }
+}
 
-  @for $last-day from 28 through 31 {
-    .calendar--month-length--#{$last-day}
-    .calendar__day:nth-child(n + #{$last-day +1}) {
-      display: none;
-    }
+@for $last-day from 28 through 31 {
+  .calendar--month-length--#{$last-day}
+  .calendar__day:nth-child(n + #{$last-day +1}) {
+    display: none;
   }
 }
