--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -1,3 +1,5 @@
-$days-of-week: (1:'mon', 2:'tue', 3:'wed', 4:'thu', 5:'fri', 6:'sat', 7:'sun');
+$days-of-week: (1:"mon", 2:"tue", 3:"wed", 4:"thu", 5:"fri", 6:"sat", 7:"sun");
 
 $square-size: 100px;
+$gep-in-days: 1px;
+$days-in-week: 7 * ($square-size + $gep-in-days);
