--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,8 @@
+@import "var/variables.scss";
+@import "blocks/calendar.scss";
+
 body {
   margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
