--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -38,6 +38,7 @@
       background-color: $cell-background-hover-colour;
       transform: translateY(-20px);
       transition: 500ms linear;
+      cursor: pointer;
     }
   }
 }
