--- a/src/styles/components/_calendar.scss
+++ b/src/styles/components/_calendar.scss
@@ -4,4 +4,43 @@
   padding: 10px;
   gap: $cell-gap;
   flex-wrap: wrap;
+  list-style: none;
+
+  @each $day, $day-num in $week-days {
+    &--day-start--#{$day}>:first-child {
+      margin-left: ($day-size + $cell-gap) * $day-num;
+    }
+  }
+
+  @for $day from 1 through $num-days {
+    &--month-length--#{$day}>:NOT(:nth-child(-n+#{$day})) {
+      display: none;
+    }
+  }
+
+  &__cell {
+    box-sizing: border-box;
+    width: $day-size;
+    height: $day-size;
+    cursor: pointer;
+    background-color: $color-day-main;
+    border: $day-border;
+    transition: all 0.5s;
+
+    &:hover {
+      background-color: $color-day-hover;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through $num-days {
+      &--#{$i}::before {
+        content: "#{$i}";
+        display: block;
+        text-align: center;
+        line-height: $day-size;
+        font-size: $day-font-size;
+        color: $color-day-number;
+      }
+    }
+  }
 }
