--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,21 @@
-body {
-  margin: 0;
-}
-
 $num-days: 31;
-$start-week-day: sun;
-$month-length: 28;
 $color-day-main: #eee;
 $color-day-hover: #ffbfcb;
 $color-day-number: black;
 $day-size: 100px;
 $day-border:  1px solid black;
-$day-font: arial;
 $day-font-size: 30px;
 $cell-gap: 1px;
+$week-days: ("mon" : 1, "teu" : 2, "wed" : 3,
+"thu" : 4, "fri" : 5, "sat" : 6, "sun" : 7);
+
+body,
+ul {
+  margin: 0;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 @import "./components/calendar";
-@import "./components/cell";
