--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,8 @@
-@import "./day-block.scss";
 @import "./calendar-block.scss";
+@import "./week-block.scss";
+
+$font-color: #616070;
+$background-color:#f3f3f3;
 
 html {
   font-family: Arial, Helvetica, sans-serif;
@@ -10,5 +13,20 @@ html {
 
 body {
   margin: 0;
+  counter-reset: day-number;
   background-color: $background-color;
+}
+
+ul {
+  margin: 0;
+}
+
+.wrapper {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: $default-padding;
+  border: 1px solid $border-color;
+  border-radius: 5px;
 }
