--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,12 +5,14 @@ $border-color: #eee;
 $color-black: #000;
 $color-hover: plum;
 
+$days-in-line: 7;
+
 $days: (
-  "mon": "1",
-  "tue": "2",
-  "wed": "3",
-  "thu": "4",
-  "fri": "5",
-  "sat": "6",
-  "sun": "7"
+  "mon": 1,
+  "tue": 2,
+  "wed": 3,
+  "thu": 4,
+  "fri": 5,
+  "sat": 6,
+  "sun": 7,
 );
