--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,66 @@
 body {
   margin: 0;
 }
+
+$block-width: 98px;
+$block-heigth: 98px;
+$entire-block: 100px;
+$gap: 1px;
+
+.block {
+  max-width: 726px;
+  min-width: 726px;
+  display: flex;
+  justify-content: left;
+  flex-wrap: wrap;
+  gap: $gap;
+  margin-top: 30px;
+
+  &__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: $block-heigth;
+    width: $block-width;
+    background-color: #eee;
+    border: 1px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    transition: transform 0.5s, background-color 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: pink;
+    }
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+  }
+}
+
+$start--day: (
+  mon: 1,
+  tue: 2,
+  wed: 3,
+  thu: 4,
+  fri: 5,
+  sat: 6,
+  sun: 7
+);
+
+@each $day, $day-num in $start--day {
+  .start--day-#{$day} {
+    .block__item:first-child {
+      margin-left: ($entire-block + $gap) * ($day_num - 1)
+    }
+  }
+}
+
+@for $current-day from 28 through 31 {
+  .month--length-#{$current-day} :nth-child(n + #{$current-day + 1}) {
+    display: none;
+  }
+}
