--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,7 +1,7 @@
-$cell-size: 100px;
-$cell-color: #eee;
-$cell-font: 'Arial';
-$cell-font-size:  30px;
-$cell-border: 1px solid #000;
-$days: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7;
-$calendar-gap: 1px;
+$day-color: #eee;
+$day-font: "Arial", "Helvetica";
+$day-font-size:  30px;
+$square-size: 100px;
+$gap: 1px;
+$days-of-week: ("mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6);
+
