--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,10 +1,4 @@
-@import 'vars';
-@import 'calendar';
-@import 'cell';
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
+@import "reset";
+@import "_vars";
+@import "_func";
+@import "calendar";
