--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -2,6 +2,9 @@ body,
 html {
   margin: 0;
   padding: 0;
-  height: 100vh;
   background-color: #768aee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
