Hover color changed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -33,7 +33,7 @@ $s: 2, 5, 8;
     font-size: 30px;
 
     &:hover {
-      background-color: aquamarine;
+      background-color: pink;
       transition-property: transform background-color;
       transition-duration: 0.5s;
       transform: translateY(-20px);
