fix some issue after first review

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 $cell-size: 100px;
 $gap-size: 1px;
-$padding: 10px;
+$padding: 25px 0 0;
 $sheet-with: $cell-size * 7 + $gap-size * 6;
 
 $days-in-week: mon 1, tue 2, wed 3, thu 4, fri 5, sat 6, sun 7,;
@@ -18,6 +18,8 @@ $number-font-position: ($cell-size - $number-font-size) / 2;
 
 .calendar {
   padding: $padding;
+  display: flex;
+  justify-content: center;
 
   &__start-day-wed,
   &__month-length-29 {
@@ -59,12 +61,12 @@ $number-font-position: ($cell-size - $number-font-size) / 2;
 
       font-family: $number-font;
       font-size: $number-font-size;
+      transition: transform 0.5s;
 
       &:hover {
         cursor: pointer;
         background-color: pink;
         transform: translate(0, -20px);
-        transition: transform 0.5s;
       }
     }
 
