--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,4 @@
-$days: (
-  "mon": 0,
-  "tue": 101px,
-  "wed": 202px,
-  "thu": 303px,
-  "fri": 404px,
-  "sat": 505px,
-  "sun": 606px
-);
+@import "vars";
 
 * {
   box-sizing: border-box;
@@ -31,7 +23,7 @@ body {
   gap: 1px;
 
   @for $day from 1 to 32 {
-    &__day-#{$day} {
+    &__day:nth-child(#{$day}) {
       display: flex;
       align-items: center;
       justify-content: center;
